# env_setup

./: .gitignore  FORKED.md  README.md  pyproject.toml
sample/recipes/: starship.toml
sample/recipes/recipes/: rust.py  zsh.py  zsh.toml
sample/settings/: settings.toml
setitup/: main.py
setitup/components/: checks.py  guard_step.py  shell_step.py  update_step.py
setitup/models/: context.py  dict_objects.py  recipes.py  settings.py  steps.py
setitup/utils/: click.py  io.py  logging.py  parsing.py  rc.py  utils.py
simple_env_setup/: erm.py  main.py  test.py
simple_env_setup/components/: simple.py
simple_env_setup/models/: __init__.py  dict_objects.py  recipes.py  settings.py
simple_env_setup/utils/: click.py  io.py  logging.py  rc.py  utils.py
